<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LiveActivity">

    <TextView
        android:id="@+id/title_bmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_bmi"
        android:textSize="32dp"/>

    <EditText
        android:id="@+id/edit_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_height"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/edit_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_weight"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btn_calcu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_calcu"
        android:onClick="calbmi"/>

    <TextView
        android:id="@+id/show_bmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/show_bmi"
        android:textSize="25sp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_bsd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_bsd"
            android:textSize="18sp"/>

        <RadioGroup
            android:id="@+id/Groupstd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/cnstd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cs"
                android:textSize="18sp"/>

            <RadioButton
                android:id="@+id/itstd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:text="@string/its"
                android:textSize="18sp"/>
        </RadioGroup>

    </LinearLayout>



    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/result"
        android:textSize="25sp"
        android:gravity="center"/>

</LinearLayout>